[package]
name = "sys"
version = "0.1.0"
edition = "2021"
license = "WTFPL"
publish = false
default-run = "sys"

[dependencies]
async-recursion = "1.0.0"
async-trait = "0.1.50"
#binance-rs-async = { version = "1.2.0", features = ["wallet_api"]}
#binance-rs-async = { path = "../binance-rs-async", features = ["wallet_api"]}
binance-rs-async = { git = "https://github.com/mvines/binance-rs-async", rev = "86fe60d40ceae5f7c73210e7600bc5c22efa4356", features = ["wallet_api"]}
bincode = "1.3"
chrono = "0.4"
chrono-humanize = "0.2.1"
clap = "2.33"
console = "0.14.1"
fd-lock = "3.0.0"
ftx = { git = "https://github.com/fabianboesiger/ftx", rev = "bb98235d356dd1a2becc5bdf32a4b738311ed434" }
#ftx = { git = "https://github.com/mvines/ftx", rev = "22dea8cf63269645eb220c9ce5ffdd0b746a9ceb" }
#ftx = { path = "../ftx" }
influxdb-client = "0.1.4"
itertools = "0.10.0"
jup-ag = "0.2.4"
#jup-ag = { path = "../jup_ag" }
lazy_static = "1.4.0"
log = "0.4.17"
pickledb = { git = "https://github.com/seladb/pickledb-rs.git", rev = "0.5.0" }
#pickledb = { path = "../pickledb-rs" }
reqwest = "0.11"
rust_decimal = "1.23"
rust_decimal_macros = "1.23"
separator = "0.4.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
simple_excel_writer = "0.1.9"
solana-clap-utils = "=1.14.1"
solana-cli-config = "=1.14.1"
solana-cli-output = "=1.14.1"
solana-client = "=1.14.1"
solana-logger = "=1.14.1"
solana-remote-wallet = "=1.14.1"
solana-sdk = "=1.14.1"
solana-transaction-status = "=1.14.1"
solana-vote-program = "=1.14.1"            # Remove `solana-vote-program` dependency upon update to Solana 1.12
spl-associated-token-account = "1.0.3"
spl-token = "3.2.0"
spl-token-lending = { git = "https://github.com/solana-labs/solana-program-library.git", rev = "1d1c2b178b8cf2ed3e28006c27b2ba5b3d039d67" }
strum = { version = "0.23", features = ["derive"] }
thiserror = "1.0"
tokio = { version = "1", features = ["macros", "time"] }
tulipv2-sdk-common = "0.9.5"

[profile.dev]
split-debuginfo = "unpacked"
