[package]
name = "sys"
version = "0.1.0"
edition = "2021"
license = "WTFPL"
publish = false
default-run = "sys"

[dependencies]
arrayref = "0.3.6"
async-recursion = "1.0.0"
async-trait = "0.1.50"
#binance-rs-async = { version = "1.2.0", features = ["wallet_api"]}
#binance-rs-async = { path = "../binance-rs-async", features = ["wallet_api"]}
binance-rs-async = { git = "https://github.com/mvines/binance-rs-async", rev = "bca0331675f39924a06c4c1fbfacc143d3774735", features = ["wallet_api"]}
bincode = "1.3"
bs58 = "0.4.0"
bytemuck = "1.5.1"
chrono = "0.4"
chrono-humanize = "0.2.1"
clap = "2.33"
#coinbase-rs = { path = "../coinbase-rs" }
coinbase-rs = { git = "https://github.com/mvines/coinbase-rs.git", rev = "f9647efa5386e24238a0b9baee3012e6d431271f" }
console = "0.14.1"
fd-lock = "3.0.0"
fixed = "1.12.0"
fixed-macro = "1.2.0"
ftx = { git = "https://github.com/fabianboesiger/ftx", rev = "bb98235d356dd1a2becc5bdf32a4b738311ed434" }
#ftx = { git = "https://github.com/mvines/ftx", rev = "22dea8cf63269645eb220c9ce5ffdd0b746a9ceb" }
#ftx = { path = "../ftx" }
futures = "0.3.25"
influxdb-client = "0.1.4"
itertools = "0.10.0"
jup-ag = "0.7.1"
#jup-ag = { path = "../jup_ag" }
#kraken_sdk_rest = { path = "../kraken_sdk_rust/kraken_sdk_rest" }
kraken_sdk_rest = { git = "https://github.com/mvines/kraken_sdk_rust", rev = "80c634b3a8527f653db989689b298496dad30d4e" }
#kraken_sdk_rest = "0.18.0"
lazy_static = "1.4.0"
log = "0.4.17"
num-derive = "0.3"
num-traits = "0.2"
pickledb = { git = "https://github.com/seladb/pickledb-rs.git", rev = "0.5.0" }
#pickledb = { path = "../pickledb-rs" }
reqwest = "0.11"
rust_decimal = "1.23"
rust_decimal_macros = "1.23"
separator = "0.4.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
simple_excel_writer = "0.1.9"
solana-account-decoder = "=1.18.26"
solana-clap-utils = "=1.18.26"
solana-cli-config = "=1.18.26"
solana-cli-output = "=1.18.26"
solana-client = "=1.18.26"
solana-logger = "=1.18.26"
solana-remote-wallet = "=1.18.26"
solana-program = "=1.18.26"
solana-sdk = "=1.18.26"
solana-transaction-status = "=1.18.26"
solana-vote-program = "=1.18.26"            # Remove `solana-vote-program` dependency upon update to Solana 1.16
spl-associated-token-account = "3.0.4"
spl-token = "4.0.0"
spl-token-2022 = "3.0.2"
spl-token-lending = { git = "https://github.com/solana-labs/solana-program-library.git", rev = "d85ea9ff0573cd82c9245965a55f379b4dc263bc" }
static_assertions = "1.1.0"
strum = { version = "0.23", features = ["derive"] }
thiserror = "1.0"
tokio = { version = "1", features = ["macros", "time"] }
#tulipv2-sdk-common = "0.9.5"
uint = "0.9.5"
criterion-stats = "0.3.0"
